* http://objectivehtml.com
*/

Version 0.6.11 - 05/18/2012
---------------------------
- Added categories fields to the get_category_entries() method to be consistent with get_channel_entries() and get_members(). The get_categories method was maintained for legacy support.
- Added prepare_entry(), submit_entry(), and update_entry() convenience methods to the data manipulation utility

Version 0.6.10 - 04/18/2012
---------------------------
- Properly escaped the WHERE and HAVING values for single quotes and SQL injection attacks.

Version 0.6.9 - 04/05/2012
-------------------------
- Fixed a pretty critical bug that prevented multiple WHERE clauses from working in the get_channel_entries method.

Version 0.6.8 - 03/30/2012
-------------------------
- HAVING clauses now have all the same capabilities as WHERE clauses.
- Added a new method to the utility classes that merges two results_arrays into one array ready for template parsing.


Version 0.6.7 - 2/28/2012
-------------------------
Fixed an issue with polymorphic parameters not searching arguments in the correct order. Also added ability to search same parameter in associative array by added an index.


Version 0.6.6 - 2/24/2012
-------------------------
Fixed an issue with the add_prefix() method that prevents it from working correctly if the prefix was NULL.


Version 0.6.5 - 2/11/2012
-------------------------
Bug fix with get_channel_entries() method. Added new utility driver with add_prefix() method.


Version 0.6.4 - 2/11/2012
-------------------------
Bug fixes.


Version 0.6.3 - 1/25/2012
-------------------------
Fixed an issue with LIKE searches not working correctly.


Version 0.6.2 - 1/15/2012
-------------------------
Added two new methods: get_field_group, get_fields_groups()


Version 0.6.1 - 12/30/2011
--------------------------